[gd_scene load_steps=4 format=3 uid="uid://4rshoot608aj"]

[ext_resource type="Script" path="res://Scenes/Tower scenes/green_tower.gd" id="1_n7s7p"]
[ext_resource type="Texture2D" uid="uid://3n80oom64xoa" path="res://Tower/towerDefense_tile249.png" id="2_h6mpa"]

[sub_resource type="CircleShape2D" id="CircleShape2D_28xap"]
radius = 78.45

[node name="GreenTower" type="StaticBody2D"]
script = ExtResource("1_n7s7p")

[node name="TowerDefenseTile249" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_h6mpa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-8.99999, 4.00005)
shape = SubResource("CircleShape2D_28xap")

[node name="Aim" type="Marker2D" parent="."]
gizmo_extents = 0.0

[node name="Tower" type="Area2D" parent="."]
scale = Vector2(2, 2)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Tower"]
position = Vector2(-9.00001, 0)
rotation = -1.70344
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_28xap")

[node name="BulletContainer" type="Node2D" parent="."]
position = Vector2(4, 0.999986)

[node name="GArea" type="Panel" parent="."]
offset_left = -265.0
offset_top = -262.0
offset_right = 260.0
offset_bottom = 257.0

[connection signal="body_entered" from="Tower" to="." method="_on_tower_body_entered"]
